--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -15,4 +15,4 @@ serde = "1.0.202"
 bls12_381_plus = "0.8.15"
 rand_core = {version = "0.6.4", features = ["std"] }
 serde_bare = "0.5"
-futures = "0.3.30"
+chrono = "0.4.38"
