--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bls12_381_plus = "0.8.15"
 rand_core = {version = "0.6.4", features = ["std"] }
 accumulator = { version = "0.1.0", path = "./accumulator" }
 entities = { version = "0.1.0", path = "./entities" }
+network = { version = "0.1.0", path = "./network" }
 
 [dev-dependencies]
 criterion = "0.4"
@@ -24,6 +25,6 @@ name = "updates"
 harness = false
 
 [[bin]]
-name = "network"
+name = "main"
 path = "./network/src/main.rs"
 harness = false
