--- a/accumulator/Cargo.toml
+++ b/accumulator/Cargo.toml
@@ -13,7 +13,6 @@ rayon = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-big-array = "0.3"
 serde_json = "1.0.117"
-bls12_381_plus = "0.8.15"
 rand_core = {version = "0.6.4", features = ["std"] }
 group = "0.13.0"
 digest = "0.10.7"
@@ -22,3 +21,4 @@ zeroize = "1.8.1"
 merlin = "3.0.0"
 bincode = "1.3.3"
 ark-ff = "0.4.2"
+blsful = "2.5.7"
