--- a/network/Cargo.toml
+++ b/network/Cargo.toml
@@ -12,7 +12,7 @@ serde_json = "1.0.117"
 reqwest = {version="0.12.4", features=["json"]}
 bincode = "1.3.3"
 serde = "1.0.202"
-bls12_381_plus = "0.8.15"
+blsful = "2.5.7"
 rand_core = {version = "0.6.4", features = ["std"] }
 serde_bare = "0.5"
 chrono = "0.4.38"
